eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplebank-api-service
spec:
  selector:
    app.kubernetes.io/name: simple-bank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: LoadBalancer
